--- a/_posts/2016-07-16-numpy.md
+++ b/_posts/2016-07-16-numpy.md
@@ -30,3 +30,63 @@ tags:
 
 ![img](\img\in-post\ndarray01.bmp)
 
+#### Basic Index and Slicing
+
+*	Python is **passing by reference**, and NumPy is designed for large data use, array data in NumPy is also passed by reference instead of value.
+*	If you want a copy of a slice of an ndarray instead of a view, you will need to explicitly copy the array; for example `arr[5:8].copy()`
+*	In multidimensional arrays, if you omit later indices, the returned object will be a lower-dimensional ndarray consisting of all the data along the higher dimensions.
+*	The following method has the same result:
+
+<pre>
+		In [64]: arr2d[0][2]
+		Out[64]: 3
+
+		In [65]: arr2d[0, 2]
+		Out[65]: 3
+</pre>
+
+The upper structure can help to understand why slicing omit the high dimension index can be treated as a lower-dimensional array.
+
+*	This boolean array can be passed when indexing the array ` data[names == 'Bob']`.
+*	The Python keywords `and` and `or` **do not work** with boolean arrays. Here we need boolean arithmatic operator `|` and `&`.
+*	*Fancy indexing* is a term adopted by NumPy to describe indexing using integer arrays. In the following code, when using array `[1, 5, 7, 2], [0, 3, 1, 2]` to slice the original array, what happens is that (1, 0), (5, 3), (7,1), and (2, 2) were selected. In fancy indexing, the array was (按照前后`[]`中的index对应选择的).
+
+<pre>
+		In [106]: arr
+		Out[106]:
+			array([[ 0, 1, 2, 3],
+			[ 4, 5, 6, 7],
+			[ 8, 9, 10, 11],
+			[12, 13, 14, 15],
+			[16, 17, 18, 19],
+			[20, 21, 22, 23],
+			[24, 25, 26, 27],
+			[28, 29, 30, 31]])	
+
+		In [107]: arr[[1, 5, 7, 2], [0, 3, 1, 2]]
+		Out[107]: array([ 4, 23, 29, 10])
+</pre>
+
+## Universal Functions
+
+*	Here in NumPy, a lot of **element wised functions** are built for vectorized calculations. (of course they are with in the NumPy namespace)
+
+![img](\img\in-post\universal-functions.bmp)
+![img](\img\in-post\binary-ufun01.bmp)
+![img](\img\in-post\binary-ufun02.bmp)
+
+## Data Processing Using Arrays
+
+*	在vector中我们使用`vec[boolean]`的方式通过布尔值选取vector中的数据，但对于多维数组，这种方法并不适用，因为高维数组并不能用数组进行slicing。在NumPy中有`np.where()`函数用来实现上述的**条件选择**功能：`result = np.where(cond, xarr, yarr)`其中`cond`是由`True`或`False`组成的条件矩阵，`xarr`和`yarr`分别是条件矩阵**相应elements**为`True`和`False`时返回的值（`xarr`和`yarr`也可以是矩阵，其返回值可以是**element wise**的）。
+*	Boolean values are coerced to 1 (True) and 0 (False) in the mathematical methods offered by NumPy.
+
+<pre>
+		In [160]: arr = randn(100)
+		In [161]: (arr > 0).sum() # Number of positive values
+		Out[161]: 44
+</pre>
+
+## File input and output with arrays
+
+*	Using `np.save()` function can save ndarrays in file, Arrays are saved by default in an uncompressed raw binary format with file extension `.npy`.
+*	NumPy can also save and load **text file**. 
