--- a/_posts/2016-07-16-numpy.md
+++ b/_posts/2016-07-16-numpy.md
@@ -26,9 +26,10 @@ tags:
 
 *	ndarray related functions:
 
-![img](\img\in-post\ndarray01.bmp)
+![img](\img\in-post\ndarray01.png)
 
-![img](\img\in-post\ndarray01.bmp)
+
+![img](\img\in-post\ndarray02.png)
 
 #### Basic Index and Slicing
 
@@ -71,9 +72,14 @@ The upper structure can help to understand why slicing omit the high dimension i
 
 *	Here in NumPy, a lot of **element wised functions** are built for vectorized calculations. (of course they are with in the NumPy namespace)
 
-![img](\img\in-post\universal-functions.bmp)
-![img](\img\in-post\binary-ufun01.bmp)
-![img](\img\in-post\binary-ufun02.bmp)
+![img](\img\in-post\universal-functions.png)
+
+
+![img](\img\in-post\binary-ufun01.png)
+
+
+![img](\img\in-post\binary-ufun02.png)
+
 
 ## Data Processing Using Arrays
 
