--- a/_posts/2016-07-21-Bases.md
+++ b/_posts/2016-07-21-Bases.md
@@ -10,6 +10,37 @@ tags:
     - 小波分析
 ---
 
+## 空间
+
+> 关于空间性质的叙述从[咋个改昵称嘛](http://blog.sina.com.cn/s/blog_569d6df80100xf6d.html)的这篇博客中有所引用。
+
+#### 空间的定义
+
+　　空间：具有某些内在结构的集合。当不附加结构时，我们一般称为集合，否则称为空间。
+
+　　下面的描述按空间的叠加程度递进：什么都没附加，称集合，也可以称为空间；附加度量（测度或距离），称度量空间（测度空间或距离空间）；附加线性结构，称线性空间或向量空间；在线性空间上附加范数，称赋范线性空间；在赋范线性空间上附加内积，称内积空间。
+
+#### 空间类型
+
+*	Banach空间和Hilbert空间是赋范线性空间中两个概念。赋范线性空间具备完备性（极限的封闭性）时称为Banach空间；赋范线性空间定义内积则为内积空间；Banach空间中定义内积即为Hilbert空间（即完备内积空间），或者完备的线性空间为Hilbert空间。
+*	Banach空间：完备赋范线性空间。
+*	Hilbert空间：完备内积空间，内积空间必为线性空间。
+*	Euclidean空间是Hilbert空间特殊化，Hilbert空间是欧几里得空间的推广，欧几里德空间是定义了内积的有限维线性空间。
+
+![img](\img\in-post\Wavelet\space.png)
+
+#### 空间特性
+
+　　我们对任何事物的刻画，都要确定其所属空间，才能知道如何来**刻画其性质**。
+
+　　下面几点值得记住：
+
+1.	度量（更一般的是拓扑）是定义现代分析核心概念（极限、连续等）的基础。
+2.	对空间抽象和分类的过程中，三个起到核心作用的概念：度量（或距离）、极限（或连续）和线性。
+3.	度量是用来刻画空间的几何结构，极限（或收敛）是用来刻画空间的分析结构，线性是用来刻画空间的代数结构。
+4.	现代分析=几何+代数+分析。由于极限是在度量的基础上定义的，常把分析结构看做是度量结构必备的。因此，现代分析=几何+代数。
+5.	泛函分析的基础建立在集合的两种结构上，一种是代数结构即线性结构，另一种是度量（拓扑）结构。具有度量结构的集合称为度量空间，具有线性结构的集合称为线性空间（或向量空间）。度量空间与线性空间本并不互相包含，二者的交集称为度量线性空间。
+
 ## 基、正交基、双正交基
 
 #### 定义
@@ -53,3 +84,7 @@ tags:
 ![img](\img\in-post\Wavelet\4.25.png)
 
 　　上式基本与使用基底展开相同，只有A>1，表示了使用框架展开引入了新的能量，产生了冗余。
+
+　　关于框架(general frame)与Riesz基之间的关系可以用如下图表表示：
+
+![img](\img\in-post\Wavelet\Frame_Riesz.png)
