--- a/_posts/2016-07-21-Bases.md
+++ b/_posts/2016-07-21-Bases.md
@@ -85,6 +85,6 @@ tags:
 
 　　上式基本与使用基底展开相同，只有A>1，表示了使用框架展开引入了新的能量，产生了冗余。
 
-　　关于框架(general frame)与Riesz基之间的关系可以用如下图表表示：
+　　关于框架(general frame)与Riesz基之间的关系可以用如下图表表示(更多关于Riesz基和框架关系的论述可以从[框架与Riesz基的比较](http://blog.sina.com.cn/s/blog_569d6df80100xf6d.html)查看)：
 
 ![img](\img\in-post\Wavelet\Frame_Riesz.png)
