--- a/_posts/2016-07-21-Bases.md
+++ b/_posts/2016-07-21-Bases.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      "基、正交基、双正交基、框架、紧框架和无约束基"
-subtitle:   "Introduction to Wavelets and Wavelet Transforms-Ch04"
-date:       2016-07-21
+title:      "空间、框架、基底"
+subtitle:   "理解小波分析的前提知识"
+date:       2016-07-26
 author:     "Jiayi.Liu"
 header-img: "img/post-bg-2015.jpg"
 catalog: 	true
@@ -65,15 +65,17 @@ tags:
 
 　　上式中采用了**双正交基**的方法，通过内积求`ak`，由上式也可以看出，如果使用规范正交基，则正交基矩阵的**行与列正交**。
 
-## 框架和紧框架
+## 框架
 
 　　在一个由函数集合张成的空间中，对于一个展开集，如过每个g(t)都有唯一的展开系数，则该展开集为一个基底，同时该展开集线性无关。但如果对于**线性相关**的展开集，每个g(t)都**能被展开**，则称该**展开集**为一个“框架”。
 
 　　很明显可以看出，用框架展开函数，会存在不止一种展开系数，并存在展开集和的冗余。
 
-　　使用帕斯瓦尔定理进行分析，对于一个展开集一定有：
+　　框架的另一种**定义方式**为，如果存在`A,B`满足下式，则可数序列`phi(k)`即可称为一个框架：
 
 ![img](\img\in-post\Wavelet\4.22.png)
+
+　　从上式中可以看出对框架的要求是**展开系数趋势与函数相同**。
 
 　　可见A与B将展开式系数的*规范化能量*限制住了，如果A=B，则该展开集称为一个**紧框架**，如果A=B=1，则该紧框架就变成一组**正交基**。
 
