--- a/_posts/2016-07-26-Bases.md
+++ b/_posts/2016-07-26-Bases.md
@@ -79,6 +79,8 @@ tags:
 
 　　可见A与B将展开式系数的*规范化能量*限制住了，如果A=B，则该展开集称为一个**紧框架**，如果A=B=1，则该紧框架就变成一组**正交基**。
 
+　　在信号重构过程中，只有当`A,B`很接近的时候重构算法才有较好的收敛性，才能获得较小的重构误差。
+
 　　可以从下面的例子中看出，AB其实代表了在用框架进行展开时的**冗余**。
 
 ![img](\img\in-post\Wavelet\4.24.png)
