--- a/_posts/2016-07-26-Bases.md
+++ b/_posts/2016-07-26-Bases.md
@@ -65,7 +65,7 @@ tags:
 
 　　上式中采用了**双正交基**的方法，通过内积求`ak`，由上式也可以看出，如果使用规范正交基，则正交基矩阵的**行与列正交**。
 
-## 框架
+## 框架与Riesz基
 
 　　在一个由函数集合张成的空间中，对于一个展开集，如过每个g(t)都有唯一的展开系数，则该展开集为一个基底，同时该展开集线性无关。但如果对于**线性相关**的展开集，每个g(t)都**能被展开**，则称该**展开集**为一个“框架”。
 
