--- a/_posts/2017-10-06-24th-birthday.md
+++ b/_posts/2017-10-06-24th-birthday.md
@@ -2,10 +2,10 @@
 layout:     post
 title:      "是否记得我骄傲的说，这世界我曾经来过"
 subtitle:   "第24个生日"
-date:       2017-10-1
+date:       2017-10-6
 author:     "Jiayi.Liu"
 header-img: "img/post-bg-2015.jpg"
-catalog: 	true
+catalog: 	false
 tags:
     - 路漫漫
 ---
