--- a/_posts/2019-02-19-google5.md
+++ b/_posts/2019-02-19-google5.md
@@ -14,8 +14,10 @@ tags:
 
 > All DP problems can be represented with *iteration* and *list*, and the list can be eliminated by **keeping only the related values**, see question 198.
 
+> To deal with leafs in a tree, you can either **check the children before adding to stack** or you can **add to the stack then just check if it is None!**
+
 ### To Do
-* String (join, replace etc.)
+* (Done [Link](https://www.programiz.com/python-programming/methods/string))String (join, replace etc.)
 * Binary Search (Search Algorithms)
 * (Done) Tree travesal!
 * Python build-in functions, [link](https://docs.python.org/2/library/functions.html)
@@ -25,7 +27,12 @@ tags:
 *	`set` in python is mutable, can be modified with `add` and `remove`. And inmutable set is `frozenset`.
 * We can use `list(set(a))` to transform set to list. Remember that `set` itself have *intersection, union, difference* methods.
 * `list.reverse()` returns nothing, just reverse the called list.
-* `from collections import defaultdict` then `lookup = defaultdict(int)`, when insert `lookup[x] = 123`.
+* `from collections import defaultdict` then `lookup = defaultdict(int)`, when insert `lookup[x] = 123`. Also, we can use `dict.get(key,default value)` to mimic the defaultdict with original dict.
+* From defaultdict we can directly use `dict['a'] += 1` to build a new element in the dict.
+* `dict.keys()` and `dict.values()` will return a list of keys and values.
+* String has no method `sort()` but we can do `sorted(list(str))`.
+* Take care when you `zip` elements, the zip will end when the **shorter** one ends.
+* `list.sort()` has no return!!
 
 ### Tree Travesal
 
@@ -50,4 +57,10 @@ tags:
 1.	Figure out what is the hard part of the problem. (Here is it may take different steps to the intersection from two head)
 2. Any idea to solve the problem?
 3. How would the problem be easier? Can we create this situation?
+
+#### 101. Symmetric Tree
+
+&nbsp;&nbsp;&nbsp;&nbsp;To deal with leafs in a tree, you can either **check the children before adding to stack** or you can **add to the stack then just check if it is None!** The latter one mostly works better!
+
+&nbsp;&nbsp;&nbsp;&nbsp;The travesal of tree is by DFS or BFS, then we can change the order of adding nodes to stack/queue to change the order for our travesal.
 
