--- a/_posts/2019-02-20-google6.md
+++ b/_posts/2019-02-20-google6.md
@@ -12,12 +12,17 @@ tags:
     - Data Structure
 ---
 
+> [This link](http://www.pythontutor.com/) is a perfect place for visualizaing the excution process of python code!
+
+> The ability to combine multiple methods is critical!
+
+> Check Youtube, there are so many useful informations.
+
 ### To Do
 
 * Summary programming paradigms!
 * Binary Search (Search Algorithms)
 * Python build-in functions, [link](https://docs.python.org/2/library/functions.html)
-* Python passing by reference visualization!!! [Link](http://www.pythontutor.com/).
 
 ### Python Programming
 
@@ -53,3 +58,9 @@ tags:
 #### 69. Sqrt(x)
 
 &nbsp;&nbsp;&nbsp;&nbsp;This is a perfect problem that reminds me **firstly analyze what is the fundation of this problem!** Is it about search? traversal? 
+
+#### 687. Longest Univalue Path
+
+&nbsp;&nbsp;&nbsp;&nbsp;Sometimes, we don't need to define the *subproblem* directly as the goal for the problem! Just like in [this link](https://leetcode.com/problems/longest-univalue-path/discuss/108142/Python-Simple-to-Understand), the subproblem is just one side length and we can compute the goal in each iteration!
+
+&nbsp;&nbsp;&nbsp;&nbsp;The ability to combine multiple methods is critical!
