--- a/_posts/2019-02-21-google7.md
+++ b/_posts/2019-02-21-google7.md
@@ -12,18 +12,27 @@ tags:
     - Data Structure
 ---
 
+> **Write down the thinking process** when solving LeetCode problems! As I did [here](https://leetcode.com/problems/merge-intervals).
+
 > The key for any computer algorithm is **"in what state I should do what"?** So we need to *define our state* first and find the most efficient way *in that state to solve the problem*.
+
+> In programming problems, **try to find odd point**!
+
+> Give extra care to the **edge situation!** Where will the loop end? When will the value being update? What will be left after the loop? 
 
 ### To Do
 
 * Summary programming paradigms!
 * Binary Search (Search Algorithms)
 * Python build-in functions, [link](https://docs.python.org/2/library/functions.html)
+* Calculating time/space complexity! Especially worst case.
 
 ### Python Programming
 
 * Use `dict.pop(key,default)` to remove item from a dictionary.
 * Even for just normal dictionary, `dict[key]=value` will **add new item to the dictinary!**
+* Sorting a list with iterable elements, it will be sorted firstly by the first item, if same, then sorted by the second item etc.
+* Even though the data structure is self-defined, we can still sort a list! See [here](https://leetcode.com/problems/merge-intervals/solution/), this is super important.
 
 ### LeetCode Problems
 
@@ -32,4 +41,15 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;The following is how should we analyze this problem:
 
 1. This is a searching problem that we are going to search for a pair that maximize the containing water.
-2. The key for any algorithm is **in what state I should do what**! For searching, we need to **define the state** (*two pointer in this problem*, state is algorithm paradigms) and then think about the most efficient thing to do in the state.
+2. The data structure is array, so **think about what method array has**.
+3. The key for any algorithm is **in what state I should do what**! For searching, we need to **define the state** (*two pointer in this problem*, state is algorithm paradigms) and then think about the most efficient thing to do in the state.
+
+&nbsp;&nbsp;&nbsp;&nbsp;In this problem, for a searching problem, the most important is **critieria for comparing, state in each step, update method**.
+
+#### 5	. Longest Palindromic Substring
+
+&nbsp;&nbsp;&nbsp;&nbsp;[Link](https://leetcode.com/problems/longest-palindromic-substring/discuss/2954/Python-easy-to-understand-solution-with-comments-(from-middle-to-two-ends).), in this problem, I learned three things:
+
+1. Analyze problem as I described in the above question 11, **write down** the thinking process as I did in [here](https://leetcode.com/problems/longest-palindromic-substring/) and [here](https://leetcode.com/problems/merge-intervals).
+2. Try to find the **odd point** for the problem, here in this problem, the odd point is the *center* of palindromic strings.
+3. If there are more than one cases, you can choose to solve them a one time with abstraction or *discuss them separately*. You have this choice!!
