--- a/_posts/2019-02-23-google9.md
+++ b/_posts/2019-02-23-google9.md
@@ -14,7 +14,7 @@ tags:
 
 ### To Do
 
-* Summary programming paradigms!
+* Summary programming paradigms! (Greedy)
 * Binary Search (Search Algorithms)
 * Python build-in functions, [link](https://docs.python.org/2/library/functions.html)
 * Calculating time/space complexity! Especially worst case.
@@ -48,6 +48,8 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;How to create a graph in memory varies from how the graph is represented.
 
+##### Directed Unweighted Graph
+
 &nbsp;&nbsp;&nbsp;&nbsp;For graphs represented by adjacency list, in this [exmaple](https://www.geeksforgeeks.org/union-find/), just use `add_edge()` to **build a dictionary** where the key is current node and values is the list that reachable in hop=1 from the current node.
 
 #### BFS and DFS for Graph
@@ -66,7 +68,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;For a graph based problem, it's more like [this](https://leetcode.com/problems/evaluate-division/discuss/88175/9-lines-%22Floydu2013Warshall%22-in-Python).
 
-##### Problem: How to find efficiently?
+##### Problem: How to `find` efficiently?
 
 > Check [this tutorial](https://www.geeksforgeeks.org/union-find-algorithm-set-2-union-by-rank/) for the most detailed explaination.
 
@@ -93,11 +95,11 @@ tags:
 
 ##### Dijkstra’s shortest path algorithm
 
-&nbsp;&nbsp;&nbsp;&nbsp;[This link](https://www.geeksforgeeks.org/dijkstras-shortest-path-algorithm-greedy-algo-7/)
+&nbsp;&nbsp;&nbsp;&nbsp;[This link](https://www.geeksforgeeks.org/dijkstras-shortest-path-algorithm-greedy-algo-7/) is the details for Dijkstra’s algorithm. This is very similar as A*. It maintained the set of visited/searched nodes and choose the closest invisited node for next search. This is a **greedy algorithm**.
 
 ##### Floyd Warshall Algorithm
 
-&nbsp;&nbsp;&nbsp;&nbsp;[This link](https://www.geeksforgeeks.org/floyd-warshall-algorithm-dp-16/)
+&nbsp;&nbsp;&nbsp;&nbsp;[This algorithm](https://www.geeksforgeeks.org/floyd-warshall-algorithm-dp-16/) is for solving **all pair shortest path** problem, unlike Dijkstra's algorithm which is for **shortest path between two specific nodes**.
 
 ### LeetCode Problems
 
