--- a/_posts/2019-02-23-google9.md
+++ b/_posts/2019-02-23-google9.md
@@ -22,6 +22,8 @@ tags:
 
 ### Graph
 
+> The basic idea for solving graph problem is to find a way to **treat the graph as a tree!**
+
 > Check [this tutorial](https://www.geeksforgeeks.org/graph-data-structure-and-algorithms/) for most of the basic algorithms and features for graph.
 
 > [This video](https://www.youtube.com/watch?v=ufj5_bppBsA) talked about many basic graph algorithms like union-find, Kruskal's Algorithm etc.
@@ -52,11 +54,17 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;For graphs represented by adjacency list, in this [exmaple](https://www.geeksforgeeks.org/union-find/), just use `add_edge()` to **build a dictionary** where the key is current node and values is the list that reachable in hop=1 from the current node.
 
+##### Directed Weighted Graph
+
+&nbsp;&nbsp;&nbsp;&nbsp;Check [this tutorial](https://www.geeksforgeeks.org/prims-mst-for-adjacency-list-representation-greedy-algo-6/) for creating weighted graph. The idea is just to **store both adjacent node and edge weight** in the dict described above. 
+
 #### BFS and DFS for Graph
 
 &nbsp;&nbsp;&nbsp;&nbsp;To travel through a graph is very similar as travel through a tree. The only thing need concern is **graph has cycles!** So, we must keep a visited list that prevent as from re-visiting nodes.
 
 &nbsp;&nbsp;&nbsp;&nbsp;To understand this problem, if we break all the cycles in a graph, we actually have a tree.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The complexity of BFS and DFS for graph is `O(E+V)` where I think `E` is for building the graph and `V` is for BFS.
 
 #### Graph Connectivity
 
@@ -77,6 +85,8 @@ tags:
 
 #### Minimum Spaning Tree
 
+> Kruskal’s algorithm is like **assemble an MSP** while Prim's algorithm is **grow an MSP**.
+
 ##### Kruskal’s Minimum Spanning Tree Algorithm
 
 &nbsp;&nbsp;&nbsp;&nbsp;The Kruskal’s algorithm is simple, check [this tutorial](https://www.geeksforgeeks.org/?p=26604/) for more details.
@@ -85,21 +95,34 @@ tags:
 2. Pick the smallest edge. Check if it forms a cycle with the spanning tree formed so far. If cycle is not formed, include this edge. Else, discard it.
 3. Repeat step#2 until there are (V-1) edges in the spanning tree.
 
+&nbsp;&nbsp;&nbsp;&nbsp;The time complexity of this algorithm is `O(ElogE)` which is the complexity of ranking all the edges by its length.
+
 ##### Prim's Algorithm
 
 &nbsp;&nbsp;&nbsp;&nbsp;Check [this tutorial](https://www.geeksforgeeks.org/prims-minimum-spanning-tree-mst-greedy-algo-5/) for the detail. Prim's algorithm focused on **find a cut** (of two sets, one contains the vertices already included in MST and other contains rest of the verices), **pick the minimum weight edge from the cut** and include this vertex to MST Set (the set that contains already included vertices).
 
 &nbsp;&nbsp;&nbsp;&nbsp;By finding the cut, we automatically eliminated the *cycled edges* from Kruskal's algorithm.
 
-#### Shortest Path Between Nodes
+#### Shortest Path
 
 ##### Dijkstra’s shortest path algorithm
 
-&nbsp;&nbsp;&nbsp;&nbsp;[This link](https://www.geeksforgeeks.org/dijkstras-shortest-path-algorithm-greedy-algo-7/) is the details for Dijkstra’s algorithm. This is very similar as A*. It maintained the set of visited/searched nodes and choose the closest invisited node for next search. This is a **greedy algorithm**.
+&nbsp;&nbsp;&nbsp;&nbsp;The Dijkstra’s algorithm tells you **the shortest path from one node to all the other node**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;[This link](https://www.geeksforgeeks.org/dijkstras-shortest-path-algorithm-greedy-algo-7/) is the details for Dijkstra’s algorithm. This is very similar to Prim's algorithm for MST. Here we *grow* a SPT (shortest path tree), what being changed is just the *critieria*. In MST, we extend the node closest to any node already in the MST. Here we **extend the node currently closest to the source**.
 
 ##### Floyd Warshall Algorithm
 
-&nbsp;&nbsp;&nbsp;&nbsp;[This algorithm](https://www.geeksforgeeks.org/floyd-warshall-algorithm-dp-16/) is for solving **all pair shortest path** problem, unlike Dijkstra's algorithm which is for **shortest path between two specific nodes**.
+&nbsp;&nbsp;&nbsp;&nbsp;[This algorithm](https://www.geeksforgeeks.org/floyd-warshall-algorithm-dp-16/) is for solving **all pair shortest path** problem, unlike Dijkstra's algorithm which is for **shortest path from one node to all the other nodes**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Floyd's algorithm actually has dynamic programming ideas! See [this tutorial](http://home.cse.ust.hk/faculty/golin/COMP271Sp03/Notes/MyL15.pdf) for understanding Floyd's algorithm in a DP way! 
+
+&nbsp;&nbsp;&nbsp;&nbsp;The idea is:
+
+1. Calculate the shortest distance between all nodes with no intermidiate node.
+2. With only `node 1` as intermediate node.
+3. With both `node 1` and `node 2` as intermediate nodes. (Only need to deal with `node 2` because `node 1` has been used in previous step.)
+4. ... Loop untill we can use any node as intermediate nodes.
 
 ### LeetCode Problems
 
