--- a/_posts/2019-02-23-google9.md
+++ b/_posts/2019-02-23-google9.md
@@ -117,12 +117,10 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;Floyd's algorithm actually has dynamic programming ideas! See [this tutorial](http://home.cse.ust.hk/faculty/golin/COMP271Sp03/Notes/MyL15.pdf) for understanding Floyd's algorithm in a DP way! 
 
-&nbsp;&nbsp;&nbsp;&nbsp;The idea is:
+&nbsp;&nbsp;&nbsp;&nbsp;The **state update** in Floyd's algorithm is:
 
-1. Calculate the shortest distance between all nodes with no intermidiate node.
-2. With only `node 1` as intermediate node.
-3. With both `node 1` and `node 2` as intermediate nodes. (Only need to deal with `node 2` because `node 1` has been used in previous step.)
-4. ... Loop untill we can use any node as intermediate nodes.
+1. Node `k` is not a vertex on the path: The shortest path between `i,j` has such length d<sub>ij</sub><sup>(k-1)</sup>.
+2. is a vertex on the path: The shortest path is d<sub>ik</sub><sup>(k-1)</sup>+d<sub>kj</sub><sup>(k-1)</sup>.
 
 ### LeetCode Problems
 
