--- a/_posts/2019-02-23-google9.md
+++ b/_posts/2019-02-23-google9.md
@@ -117,7 +117,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;Floyd's algorithm actually has dynamic programming ideas! See [this tutorial](http://home.cse.ust.hk/faculty/golin/COMP271Sp03/Notes/MyL15.pdf) for understanding Floyd's algorithm in a DP way! 
 
-&nbsp;&nbsp;&nbsp;&nbsp;The **state update** in Floyd's algorithm is:
+&nbsp;&nbsp;&nbsp;&nbsp;The **state update** in Floyd's algorithm is (read the above tutorial page 6-7 for more detail):
 
 1. Node `k` is not a vertex on the path: The shortest path between `i,j` has such length d<sub>ij</sub><sup>(k-1)</sup>.
 2. is a vertex on the path: The shortest path is d<sub>ik</sub><sup>(k-1)</sup>+d<sub>kj</sub><sup>(k-1)</sup>.
