--- a/_posts/2019-02-24-google10.md
+++ b/_posts/2019-02-24-google10.md
@@ -45,4 +45,6 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;The above algorithm is very similar as devide and conqure.
 
-####
+#### 31. Next Permutation
+
+&nbsp;&nbsp;&nbsp;&nbsp;It is so important to **build test case that can reveal the structure of the problem**. In [this problem](https://leetcode.com/problems/next-permutation/) making test case with the same input numbers but in different order is much more useful than use different numbers.
