--- a/_posts/2019-02-27-google13.md
+++ b/_posts/2019-02-27-google13.md
@@ -16,7 +16,10 @@ tags:
 
 ### To Do
 
+1. ML interview preparing!
+2. Graph LeetCode problems.
+3. Divide & Conquer LeetCode.
+4. Binary Search, more LeetCode.
+
 ### Python Programming
 * Don't forget `set` manipulation like `| - ^ &`, check [here](https://www.geeksforgeeks.org/python-set-operations-union-intersection-difference-symmetric-difference/) for more detail.
-
-### LeetCode Problems
