--- a/_posts/2019-02-28-google14.md
+++ b/_posts/2019-02-28-google14.md
@@ -12,6 +12,10 @@ tags:
     - Data Structure
 ---
 
+### To Do
+
+1. Implement Graph Algorithm.
+
 ### Python Programming
 
 * Python has no **max heap** implementation, the `heapq.heapify(array)` can only create min heap. We can first use `nums = [-n for n in nums]` to create max heap.
