--- a/_posts/2019-03-02-google15.md
+++ b/_posts/2019-03-02-google15.md
@@ -16,10 +16,13 @@ tags:
 
 1. OOD problems.
 2. Graph algorithm implementation.
+3. Union-find implementation.
 
 ### Python Programming
 
 * Remove key from dictionary `dict.pop(key, default)` or `del dict[key]` but need make sure key is in dict.
+* The `if` statement in list comprehension should be **placed at the end**! `a = [x for x in board if x != "."]`.
+* In a lot of designing problems, we need to implement functions like `next` where **generator** can be very useful. [This reference](https://www.programiz.com/python-programming/generator) gives clear tutorial for how to use and define a generator function in python.
 
 ### LeetCode Problems
 
@@ -36,3 +39,7 @@ tags:
 #### 341. Flatten Nested List Iterator
 
 &nbsp;&nbsp;&nbsp;&nbsp;**Use stack to avoid recurssion** is a very important idea! Just like the "Basic Calculator" I mentioned in last post, stack can store what we are working on right now for future use!
+
+#### 322. Coin Change
+
+&nbsp;&nbsp;&nbsp;&nbsp;The **search with tree** is just equal to backtracking! This kind of search is NP algorithm and we can use DP, divide and conquer or other ways to improve it.
