--- a/_posts/2019-03-02-google15.md
+++ b/_posts/2019-03-02-google15.md
@@ -12,17 +12,19 @@ tags:
     - Data Structure
 ---
 
+> A *disjoint-set* (Union-Find) data structure is a data structure that keeps track of a set of elements **partitioned** into a number of disjoint (non-overlapping) subsets.
+
 ### To Do
 
 1. OOD problems.
 2. Graph algorithm implementation.
-3. Union-find implementation.
 
 ### Python Programming
 
 * Remove key from dictionary `dict.pop(key, default)` or `del dict[key]` but need make sure key is in dict.
 * The `if` statement in list comprehension should be **placed at the end**! `a = [x for x in board if x != "."]`.
 * In a lot of designing problems, we need to implement functions like `next` where **generator** can be very useful. [This reference](https://www.programiz.com/python-programming/generator) gives clear tutorial for how to use and define a generator function in python.
+* In python, we can do `a=b=1` for assign value.
 
 ### LeetCode Problems
 
@@ -43,3 +45,17 @@ tags:
 #### 322. Coin Change
 
 &nbsp;&nbsp;&nbsp;&nbsp;The **search with tree** is just equal to backtracking! This kind of search is NP algorithm and we can use DP, divide and conquer or other ways to improve it.
+
+#### 547. Friend Circles
+
+&nbsp;&nbsp;&nbsp;&nbsp;In [this problem](https://leetcode.com/problems/friend-circles/discuss/101349/Python-Simple-Explanation), it is easy to think about using dfs, but **instead of using dfs for the matrix, we do dfs with each node!** This is all about taking care of the problem and the data structure you have. Here becaue we actually are dealing with undirected graph, the matrix is definitely symmetric, if we use dfs for the matrix it will be very wasteful.
+
+#### 684. Redundant Connection
+
+> A *disjoint-set* (Union-Find) data structure is a data structure that keeps track of a set of elements **partitioned** into a number of disjoint (non-overlapping) subsets.
+
+> Union-Find cares about **partition** a set of elements, that's when we can use it.
+
+&nbsp;&nbsp;&nbsp;&nbsp;[This problem](https://leetcode.com/problems/redundant-connection/) is a good implementation with union-find. I used both ranked union and path compression, remember that by using ranked union and path compression, both **union and find operation have near constant complexity**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Take care that when we use ranked union, we are **union the parent node**, so we always **need to call `find` within `union`**.
