--- a/_posts/2019-03-04-ml.md
+++ b/_posts/2019-03-04-ml.md
@@ -18,9 +18,9 @@ tags:
 
 ### To Do
 
-* Calculate the monkey bayes problem.
-* SVM.
 * Random Forest.
+* Check more sklearn implementation.
+* ML design problems.
 
 ### Precision & Recall
 
@@ -44,7 +44,16 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;The vanilla logistic regression is designed for binary classification. According to [this tutorial](https://towardsdatascience.com/building-a-logistic-regression-in-python-301d27367c24), linear model, sigmoid function and cross-entropy loss is the main element for logistic regression.
 
-&nbsp;&nbsp;&nbsp;&nbsp;To use logistic regression in multinomial/multi-label situation, we can either use `one versus all` schema for multiple times or change the loss function to **cross entropy loss**.
+&nbsp;&nbsp;&nbsp;&nbsp;To use logistic regression in multinomial/multi-label situation, we can either use `one versus all` schema for multiple times or change the sigmoid function to **softmax**. The multiclass cross entropy loss is just **the sum of binary cross entropy for all classes**, check it in [here](https://datascience.stackexchange.com/questions/9302/the-cross-entropy-error-function-in-neural-networks).
+
+&nbsp;&nbsp;&nbsp;&nbsp;The `sklearn` implementation is simple, just see [here](https://towardsdatascience.com/building-a-logistic-regression-in-python-301d27367c24). Some key points:
+
+1. `from sklearn.linear_model import LogisticRegression`
+2. `from sklearn.metrics improt accuracy_score`
+3. `rand = np.random.rand((10,10))`
+4. `model.fit(x,y)`
+5. `model.predict(x)`
+6. `acc = accuracy_score(y,predicted_y)`
 
 ### A/B Test
 
@@ -76,4 +85,24 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;SVM is not only trying to find the hyperplane that separate nodes, but the hyperplane **with largest margin**. According to [this tutorial](https://towardsdatascience.com/support-vector-machine-introduction-to-machine-learning-algorithms-934a444fca47), **support vectors** are **data points** that are closer to the hyperplane and influence the position and orientation of the hyperplane.
 
-&nbsp;&nbsp;&nbsp;&nbsp;To find the max margin, **hinge loss is used**.
+&nbsp;&nbsp;&nbsp;&nbsp;To find the max margin, **hinge loss is used**, `loss=max(0,1-y*f(x))`.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Sklearn implementation:
+
+1. Test train split & KFold-cross validation: `from sklearn.model_selection import train_test_split, KFold `
+2. `X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20) `
+3. `from sklearn.svm import SVC`
+4. `svclassifier = SVC(kernel='linear')`
+5. fit + predict
+6. `from sklearn.metrics import confusion_matrix, accuracy_score` 
+
+### Random Forest
+
+> Decision tree + Bagging!
+
+&nbsp;&nbsp;&nbsp;&nbsp;Random Forest adds additional randomness to the model, while growing the trees. Instead of searching for the most important feature while splitting a node, it searches for the best feature among a random subset of features. This results in a wide diversity that generally results in a better model.
+
+### Matplotlib
+
+* `plt.plot(x,y,label="")` is to draw curves.
+* `plt.scatter(x,y,label="")` is to draw scatters.
