--- a/_posts/2019-03-04-ml.md
+++ b/_posts/2019-03-04-ml.md
@@ -14,19 +14,28 @@ tags:
 
 > Firstly think about what is the problem we are analyzing. Regression? Classification? Unsupervised?
 
-> For all ML problems, there are always some important entities: **data, model, objective function**. Our technology like p-vaule is for data (null hypothesis), multiple model and loss is for the rest.
+> For all ML problems, there are always some important entities: **data, model, objective function**. Our technology like p-vaule is for data (null hypothesis), multiple model and loss is for the rest. Take a look at [this answer](https://qr.ae/TW7ivG), the writer really mastered such idea for analyzing DS problems.
 
 ### To Do
 
-* Random Forest.
-* Check more sklearn implementation.
-* ML design problems.
+* Python implementation.
+* SQL.
 
-### Precision & Recall
+### Precision & Recall (Sensitivity)
 
 > Precision is "**how useful the search results are**", and recall is "**how complete the results are**".
 
 &nbsp;&nbsp;&nbsp;&nbsp;Suppose a computer program for recognizing dogs in photographs identifies 8 dogs in a picture containing 12 dogs and some cats. Of the 8 identified as dogs, 5 actually are dogs (true positives), while the rest are cats (false positives). The program's precision is 5/8 while its recall is 5/12. When a search engine returns 30 pages only 20 of which were relevant while failing to return 40 additional relevant pages, its precision is 20/30 = 2/3 while its recall is 20/60 = 1/3.
+
+#### AUC and ROC
+
+> For more details than below, check [this tutorial](https://medium.com/greyatom/lets-learn-about-auc-roc-curve-4a94b4d88152).
+
+&nbsp;&nbsp;&nbsp;&nbsp;AUC (area under curve) is evaluating the rate for **classify positive to positive and negative to negative**. So, in perfect situation, we should get `AUC=1`.
+
+&nbsp;&nbsp;&nbsp;&nbsp;ROC is a curve with y axis to be **true positive rate (TPR)** and x axis to be **false positive rate (FPR)**. Actually the FPR is just `1 - True Negative Rate` (Specificity, compared with sensitivity/recall). Sensitivity represent the model can correctly classify positive to positive and specificity says the model can classify negative to negative.
+
+&nbsp;&nbsp;&nbsp;&nbsp;For how to translate the above relationship into a curve, [this tutorial](https://medium.com/greyatom/lets-learn-about-auc-roc-curve-4a94b4d88152) described this relationship as **shifting the threshold**, which is very impressive.
 
 ### F1 Score
 
@@ -60,6 +69,8 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;No more than **控制变量法**, the key points is **randomly assign customer** and **only one variable**, then we can have clear causal relationship between the changed variable and the change of metric (result).
 
 ### P-value and null hypothesis test
+
+> For what is p-value and null hypothesis, check [this tutorial](https://www.spss-tutorials.com/null-hypothesis/).
 
 > How to calculate p-value, chech [this tutorial](https://www.wikihow.com/Calculate-P-Value).
 
