--- a/_posts/2019-03-04-ml.md
+++ b/_posts/2019-03-04-ml.md
@@ -7,9 +7,8 @@ author:     "Jiayi.Liu"
 header-img: "img/post-bg-2015.jpg"
 catalog: 	true
 tags:
-    - LeetCode
-    - Algorithm
-    - Data Structure
+    - Machine Learning
+    - Data Science
 ---
 
 > Firstly think about what is the problem we are analyzing. Regression? Classification? Unsupervised?
@@ -78,7 +77,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;P-value is to **test is the null hypothesis hold or not.** 
 
-&nbsp;&nbsp;&nbsp;&nbsp;The null hypothesis is normally our **guess** for the system, for example the chance for getting head and tail are both 0.5 if your toss a coin. But if we toss a coin 10 times and get 6 head, **does that mean the coin is biased (the null hypothesis is wrong) or this is caused by chance (variance)?** A p-value will help us determine this! For how to calculate p-value, check the tutorial I linked above. But really calculating a p-value includes the process of **checking in table** as shown in the above tutorial, we need to know more about the idea behind it.
+&nbsp;&nbsp;&nbsp;&nbsp;The null hypothesis is normally our **guess** for the system, for example the chance for getting head and tail are both 0.5 if your toss a coin (in [this tutorial](https://www.spss-tutorials.com/null-hypothesis/), this kind of null hypothesis is called 'point estimate'). But if we toss a coin 10 times and get 6 head, **does that mean the coin is biased (the null hypothesis is wrong) or this is caused by chance (variance)?** A p-value will help us determine this! For how to calculate p-value, check the tutorial I linked above. But really calculating a p-value includes the process of **checking in table** as shown in the above tutorial, we need to know more about the idea behind it.
 
 &nbsp;&nbsp;&nbsp;&nbsp;Significance levels are written as a decimal (such as 0.01), which corresponds to the percent chance that random sampling would produce a difference as large as the one you observed if there was no underlying difference in the populations. 简单来说 significance level 决定了 **how sure you want** about your judgement (about null hypothesis).
 
